--- a/sample/form.html
+++ b/sample/form.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div style="text-align: right; width: 100%; margin-top: 15px;">
-                    <input class="button" type="submit" value="Submit" onclick="loadText()">
+                    <input class="button" value="Submit" onclick="loadText()">
                 </div>
                 <div id="message" style="color: red">
 
